--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="pl">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/Pictures/pwlogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#3f51b5" />
+    <meta name="theme-color" content="#20232a" />
     <meta
       name="description"
-      content="Strona do gry karcianej pocket-waifu"
+      content="Strona do gry karcianej Pocket Waifu"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/Pictures/pwlogo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,9 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>pocket-waifu</title>
+    <title>Pocket Waifu</title>
   </head>
-  <body style="margin: 0; height: 100%; background-color: #20232a;">
+  <body style="margin: 0; background-color: #20232a;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
