Meta image test

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Strona do gry karcianej Pocket Waifu"
     />
+    <meta property='og:image' content='%PUBLIC_URL%/Pictures/pwlogo.png'>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/Pictures/pwlogo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
