Update CardDetails & fix pagination

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
       name="description"
       content="Strona do gry karcianej Pocket Waifu"
     />
-    <meta property='og:image' content='%PUBLIC_URL%/Pictures/pwlogo.png'>
+    <meta property='og:image' content='%PUBLIC_URL%/Pictures/pwlogo.png' />
+    <meta name="keywords" content="waifu, sanakan, pocket waifu, shinden"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/Pictures/pwlogo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
