--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Pocket Waifu</title>
+    <style>
+      .checkboxDisplay {
+          display: none;
+      }
+  </style>
   </head>
   <body style="margin: 0; background-color: #20232a;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
